multi-tenancy/pod_tenant_1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-tenant-1
spec:
  containers:
  - image: ubuntu
    name: ubuntu
    command:
      - "sleep"
      - "604800"
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
            - key: tenant
              operator: In
              values:
              - tenant-1
  # tolerations:
  # - effect: NoSchedule
  #   key: tenant
  #   operator: Equal
  #   value: tenant-1
