multi-tenancy/pod_tenant_2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-tenant-2
spec:
  containers:
  - image: ubuntu
    name: ubuntu
    command:
      - "sleep"
      - "604800"
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
            - key: tenant
              operator: In
              values:
              - tenant-2
  # tolerations:
  # - effect: NoSchedule
  #   key: tenant
  #   operator: Equal
  #   value: tenans-2
